--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <div class="header-nav">
                             <ul>
                                 <li><a id="homebtn" class="home-btn  " href="">Home</a></li>
-                                <li><a href="">Blog</a></li>
-                                <li><a href="">Contact Us</a></li>
-                                <li><a href="">Services</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contactus.html">Contact Us</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
                                 
                             </ul>
                             
@@ -261,7 +261,7 @@
         <div class="section-7">
             <div class="section-7-header">
                 <div class="section-7-header-logo">
-                    <h2>kHaN</h2>
+                    <h2 ><a href="index.html">kHaN</a> </h2>
                 </div>
                 <div class="section-7-header-follow">
                     <h2>Follow us</h2>
@@ -288,7 +288,7 @@
                         <a href="">Home</a><br>
                         <a href="">Blog</a><br>
                         <a href="">Contact Us</a><br>
-                        <a href="">Services</a>
+                        <a href="">About Us</a>
 
                     </div>
                     <div class="recentnews">
