--- a/signin.html
+++ b/signin.html
@@ -19,13 +19,13 @@
         <form id="signupForm">
             <div class="input-group">
                 <i class="fa fa-user"></i>
-                <input type="text" id="username" name="username" placeholder="Enter Username" required>
+                <input type="text" id="username" name="username" placeholder="Enter Username" >
                 <span id="span1"></span>
             </div>
            
             <div class="input-group">
                 <i class="fa fa-lock"></i>
-                <input type="password" id="password" name="password" placeholder="Enter Password" required
+                <input type="password" id="password" name="password" placeholder="Enter Password"
                     minlength="6">
                 <span id="span2"></span>
             </div>
