--- a/signup.html
+++ b/signup.html
@@ -18,21 +18,26 @@
         <form id="signupForm">
             <div class="input-group">
                 <i class="fa fa-user"></i>
-                <input type="text" id="username" name="username" placeholder="Enter Username" required >
+                <input type="text" id="username" name="username" placeholder="Enter Username" >
+                <span id="span1"></span>
+
             </div>
             <div class="input-group">
                 <i class="fa fa-envelope"></i>
-                <input type="email" id="email" name="email" placeholder="Enter Email" required>
+                <input type="email" id="email" name="email" placeholder="Enter Email" >
+                <span id="span2"></span>
             </div>
             <div class="input-group">
                 <i class="fa fa-lock"></i>
-                <input type="password" id="password" name="password" placeholder="Create Password" required
+                <input type="password" id="password" name="password" placeholder="Create Password"
                     minlength="6">
+                    <span id="span3"></span>
             </div>
             <div class="input-group">
                 <i class="fa fa-lock"></i>
                 <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password"
-                    required>
+                >
+                    <span id="span4"></span>
             </div>
             <div class="signUp-link">
                
