--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <header>
                     <div class="header-top">
                         <div class="header-logo">
-                            <h2>Sheraz Abbas</h2>
+                            <h2>Aun</h2>
                         </div>
                         <div class="header-nav">
                             <ul>
@@ -261,7 +261,7 @@
         <div class="section-7">
             <div class="section-7-header">
                 <div class="section-7-header-logo">
-                    <h2 ><a href="index.html">kHaN</a> </h2>
+                    <h2 ><a href="index.html">Aun</a> </h2>
                 </div>
                 <div class="section-7-header-follow">
                     <h2>Follow us</h2>
